BENTO-13: * Acquire the JDK version from toml file (where all other versions are specified). * Upgrade the JavaFX version to remove CVE warnings and to try to fix issue where leaf isn't collapsing. * Make changes suggested by SonarQube.